istio/http-routes/demo-app-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-app
  namespace: demo-app
spec:
  parentRefs:
    - name: shared-ingress
      namespace: istio-system
  hostnames:
    - demo-app.maklab.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: demo-app
          port: 3000
