istio/http-routes/notes-app-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: notes-app
  namespace: notes-app
spec:
  parentRefs:
    - name: shared-ingress
      namespace: istio-system
  hostnames:
    - notes-app.maklab.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: notes-app
          port: 8080
